--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "reflux": "^0.3.0",
     "rsvp": "^3.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "history": "^1.12.5",
+    "react-router": "^1.0.0-rc3"
+  }
 }
