--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-bootstrap": "^0.27.1",
     "react-dom": "^0.14.0",
     "reflux": "^0.3.0",
-    "rsvp": "^3.1.0"
+    "rsvp": "^3.1.0",
+    "uglify-js": "^2.5.0",
+    "uglifyify": "^3.0.1"
   },
   "dependencies": {
     "history": "^1.12.5",
