--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "soundmanager2": "^2.97.20150601"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "route-recognizer": "^0.1.9",
