--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "route-recognizer": "^0.1.9",
-    "rsvp": "^3.1.0"
+    "rsvp": "^3.1.0",
+    "serve-static": "^1.10.0"
   }
 }
