--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,8 @@
     "rules": {
         "comma-dangle": 0,
         "jsx-quotes": 1,
+        "eqeqeq": 2,
+        "no-magic-numbers": 2,
         "quotes": [
             2,
             "single"
