--- a/app/browser.template
+++ b/app/browser.template
@@ -6,7 +6,11 @@ var React = require('react');
 var ReactDOM = require('react-dom');
 var env = require('./services/env');
 
-env.set( { debugMode: {debugMode} } );
+env.set( { 
+    debugMode: {debugMode},
+    browser: true,
+    server: false
+  });
 
 var app = require('./{app}');
 
