--- a/build
+++ b/build
@@ -245,7 +245,7 @@ function bundleVendorJSFiles() {
     ]
   };
 
-  if( APP_NAME === 'pells' || APP_NAME === 'stems') {
+  if( APP_NAME === 'pells' || APP_NAME === 'stems' || APP_NAME === 'playlists') {
     vendorJSSources.dev. push( 'node_modules/nouislider/distribute/nouislider.js');
     vendorJSSources.prod.push( 'node_modules/nouislider/distribute/nouislider.min.js');
   }
@@ -291,7 +291,7 @@ function bundleVendorCSSFiles() {
       'node_modules/font-awesome/css/font-awesome.min.css',
     ]
   };
-  if( APP_NAME === 'pells' || APP_NAME === 'stems') {
+  if( APP_NAME === 'pells' || APP_NAME === 'stems' || APP_NAME === 'playlists') {
     vendorCSSSources.dev. push('node_modules/nouislider/distribute/nouislider.min.css');
     vendorCSSSources.prod.push('node_modules/nouislider/distribute/nouislider.min.css');
   }  
