--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "react": "./react-shim.js",
     "react-dom": "./react-dom-shim.js"
   },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "browserify-shim"
+    ]
+  },
   "browserify-shim": {
     "react": "global:React",
     "react-dom": "global:ReactDOM"
@@ -37,17 +43,36 @@
     "music"
   ],
   "devDependencies": {
-    "babelify": "^6.3.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "bootstrap": "^3.3.5",
+    "browserify": "^13.0.1",
+    "browserify-shim": "^3.8.12",
     "del": "^2.0.2",
-    "eslint-plugin-react": "^3.6.3",
+    "eslint": "^2.11.0",
+    "eslint-plugin-react": "^5.1.1",
     "font-awesome": "^4.4.0",
     "glob": "^5.0.15",
+    "graceful-fs": "^4.1.4",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-chmod": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-template": "^4.0.0",
     "jquery": "^2.1.4",
+    "lodash": "^4.13.1",
     "md5": "^2.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "soundmanager2": "^2.97.20150601"
+    "moment": "^2.13.0",
+    "soundmanager2": "^2.97.20150601",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "express": "^4.13.3",
