--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-chmod": "^1.3.0",
+    "gulp-clean-css": "^2.0.9",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^4.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
     "jquery": "^2.1.4",
     "lodash": "^4.13.1",
     "md5": "^2.0.0",
@@ -71,6 +74,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
     "soundmanager2": "^2.97.20150601",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.13.1"
   },
