--- a/app/browser.template
+++ b/app/browser.template
@@ -17,7 +17,8 @@ env.set( {
   appName: '<%= app %>',
   rpcHost: 'http://<%= apihost %>/api/',
   queryHost: 'http://<%= apihost %>/api/query?',
-  queriesHost: 'http://<%= apihost %>/api/queries?'
+  queriesHost: 'http://<%= apihost %>/api/queries?',
+  selfHost: '<%= satellite_host %>' ? 'http://<%= satellite_host %>/' : '/'
 });
 
 var app = require('./<%= app%>');
