--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ app/components/ccmixter/index.js
 app/components/dig/index.js
 app/components/pells/index.js
 app/components/playlists/index.js
+app/components/playlists/pages/index.js 
+app/components/models/index.js 
+app/components/bound/index.js 
+app/components/services/index.js 
+app/components/vanilla/index.js 
 
 /logs
 /bpm
