--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^4.0.0",
+    "gulp-todo": "^4.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jquery": "^2.1.4",
