--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "bootstrap": "^3.3.5",
     "browserify": "^13.0.1",
     "browserify-shim": "^3.8.12",
+    "change-case": "^3.0.0",
     "del": "^2.0.2",
     "eslint": "^2.11.0",
     "eslint-plugin-react": "^5.1.1",
@@ -71,12 +72,14 @@
     "gulp-util": "^3.0.7",
     "jquery": "^2.1.4",
     "lodash": "^4.13.1",
+    "map-stream": "0.0.6",
     "md5": "^2.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
     "soundmanager2": "^2.97.20150601",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-fs": "^2.4.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "webpack": "^1.13.1"
