--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
@@ -85,6 +86,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.9.2",
     "express": "^4.13.3",
     "nouislider": "leongersen/noUiSlider",
     "react": "^0.14.0",
